<resources>
    <string name="app_name">NewsAppDemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">News</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">BBC</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="aljarzera">aljazera</string>
    <string name="cnn">CNN</string>
    <string name="fox_News">Fox News</string>
    <string name="skynews">Sky News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sky_news_fragment">Sky News Fragment</string>
    <string name="fox_news_fragg">Fox News Fragment</string>
</resources>