<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jsstech.newsappdemo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.jsstech.newsappdemo.ui.gallery.GalleryFragment"
        android:label="@string/aljarzera"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.jsstech.newsappdemo.ui.slideshow.SlideshowFragment"
        android:label="@string/cnn"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_foxNewsFragement"
        android:name="com.jsstech.newsappdemo.FoxNewsFragment"
        android:label="@string/fox_News"
        tools:layout="@layout/fragment_fox_news" />
    <fragment
        android:id="@+id/nav_skyNewsFragement"
        android:name="com.jsstech.newsappdemo.SkyNewsFragment"
        android:label="@string/skynews"
        tools:layout="@layout/fragment_sky_news" />
</navigation>